# dak_script

./: .clang-format  CMakeLists.txt  README.md  build.sh  example_file.dak  example_file.txt  output.txt
cmake/: add_FetchContent_MakeAvailable.cmake
docs/: DEFINITIONS.md  DESIGN.md  IR_GENERATION.md  TODO.md
example_program/: index.dak
include/dak_assert/: assert.h
include/dak_script/: abstract_syntax_tree.h  api_object.h  ast.h  ast_expression.h  ast_type.h  character_traits.h  character_type.h  codegen.h  file.h  file_descriptor.h  file_handle.h  function.h  lexer.h  lexetize.h  lookup.h  mapped_file.h  member.h  mmapped_file.h  module_import.h  parser.h  reader.h  reserves.h  simple_str.h  string_map.h  string_utils.h  substring.h  symbol_table.h  token.h  token_maps.h  token_module.h  tokenize.h
include/dak_script/ast/: ast.h  scope.h  type.h  variable.h
include/dak_script/llvm_ir/: arg.h  builder.h  context.h  generator.h  instruction.h  instructions.h  line.h  module.h  serializer.h  value.h  writer.h
include/dak_std/: assert.h  const_string.h  error.h  filesystem.h  linear_allocator.h  linked_queue.h  static_string_map.h  string.h  string_map.h  string_utils.h  trivial_vector.h  type_assert.h  vector.h
src/: CMakeLists.txt  abstract_syntax_tree.cpp  ast.cpp  ast_expression.cpp  character_traits.cpp  character_type.cpp  file_descriptor.cpp  file_handle.cpp  lexer.cpp  lexetize.cpp  main.cpp  mmapped_file.cpp  parser.cpp  reader.cpp  reserves.cpp  simple_str.cpp  substring.cpp  token.cpp  token_module.cpp  tokenize.cpp
src/ast/: scope.cpp
src/dak_std/: error.cpp  filesystem.cpp  string.cpp
src/llvm_ir/: generator.cpp  serializer.cpp  value.cpp
tests/: CMakeLists.txt  example_file.txt  expectations.cpp  expectations.h  file_descriptor_test.cpp  file_handle_test.cpp  lexer_test.cpp  lexetize_test.cpp  mmapped_file_test.cpp  parser_test.cpp  reader_test.cpp  string_buffer_test.cpp  tokenize_test.cpp
